2009-06-24
- vertical panel done
  user's parameters :
  1) add 'vertical' to panel_position (panel_position = center left vertical)
  2) use 'task_width' to define the task height (task_width = 30)
  3) adjust paddingy on task and systray wiil define the size of icons
  all others parameters are automatically converted by tint2
  (x padding become y padding, width become height ...)
  so user's change between horizontal and vertical are minimised.

2009-06-23
- play with vertical panel
  check sample file tintrc05 and tintrc06
  more change to come...

2009-06-21
- play with some code for vertical panel

2009-06-20
- remove flickering on systray

2009-06-20
- 'urgent_nb_of_blink' allow to choose the number of blink

2009-06-19
- change systray code. fixed issue 91.

2009-06-18
- patch by Christian Ruppert, configure option for battery

2009-06-14
- revert r78, fixed issue 100

2009-06-13
- fixed background refresh on systray

2009-06-09
- fixed issue 98

2009-06-08
- fixed issue 97 and issue 95

2009-06-08
- allow 'taskbar_mode = multi_desktop' config with 'panel_monitor = all'

2009-06-07
- merge autotool build system by Christian Ruppert

2009-06-06
- fixed issue 56 : with windowmaker
  bug in windowmaker : send unecessary 'desktop changed' each time focus changed

2009-06-06
- add 'wm_menu' config option to disable window manager's menu
  if you don't specify "wm_menu = ", the default value will show WM menu.

2009-06-06
- fixed issue 90 and issue 81 : window manager's menu in panel padding
  works on openbox, pekwm, fluxbox, icewm.
  doesn't work on xfce, windowmaker ?
  tint2 send mouse event to your window manager on left/right padding
  and on top/bottom panel padding.

2009-06-05
- fixed issue 46 and 59 : urgent task
  limitation : just one urgent task at a time

2009-06-04
- patch by dmitry.medvinsky : right/left clic command

2009-06-02
- Systray Temp_Fix from keshto
  not yet perfect, but a first step

2009-05-31
- fixed issue 71 : time format %T %r
